--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -428,27 +428,27 @@ workflows:
       #      filters:
       #        branches:
       #          only: production
-      #  - build-binaries-linux:
-      #      name: build-binaries-x86_64-gnu
-      #      image: ubuntu-2204:2022.04.1
-      #      target: x86_64-unknown-linux-gnu
-      #      resource_class: medium
+       - build-binaries-linux:
+           name: build-binaries-x86_64-gnu
+           image: ubuntu-2204:2022.04.1
+           target: x86_64-unknown-linux-gnu
+           resource_class: medium
           #  filters:
           #    branches:
           #      only: production
-      #  - build-binaries-linux:
-      #      name: build-binaries-x86_64-musl
-      #      image: ubuntu-2204:2022.04.1
-      #      target: x86_64-unknown-linux-musl
-      #      resource_class: medium
+       - build-binaries-linux:
+           name: build-binaries-x86_64-musl
+           image: ubuntu-2204:2022.04.1
+           target: x86_64-unknown-linux-musl
+           resource_class: medium
           #  filters:
           #    branches:
           #      only: production
-      #  - build-binaries-linux:
-      #      name: build-binaries-aarch64
-      #      image: ubuntu-2004:202101-01
-      #      target: aarch64-unknown-linux-musl
-      #      resource_class: arm.medium
+       - build-binaries-linux:
+           name: build-binaries-aarch64
+           image: ubuntu-2004:202101-01
+           target: aarch64-unknown-linux-musl
+           resource_class: arm.medium
           #  filters:
           #    branches:
           #      only: production
@@ -456,17 +456,17 @@ workflows:
           # filters:
           #   branches:
           #     only: production
-      #  - build-binaries-mac
+       - build-binaries-mac
           # filters:
           #   branches:
           #    only: production
        - publish-github-release:
           requires:
-            # - build-binaries-x86_64-gnu
-            # - build-binaries-x86_64-musl
-            # - build-binaries-aarch64
+            - build-binaries-x86_64-gnu
+            - build-binaries-x86_64-musl
+            - build-binaries-aarch64
             - build-binaries-windows
-            # - build-binaries-mac
+            - build-binaries-mac
           # filters:
           #   branches:
           #    only: production
