test(auth): added integration tests for pro upgrade/downgrade

--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -40,3 +40,4 @@ axum-extra = { version = "0.7.1", features = ["cookie"] }
 hyper = { workspace = true }
 serde_json = { workspace = true }
 tower = { workspace = true, features = ["util"] }
+portpicker = { workspace = true }
