circleci: added STRIPE_SECRET_KEY deploy images param

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -393,6 +393,9 @@ jobs:
       logger-postgres-uri:
         description: "URI used to connect to the logger RDS postgres database."
         type: string
+      stripe-secret-key:
+        description: "Stripe secret key used to connect a client to Stripe backend"
+        type: string
       production:
         description: "Push and deploy to production"
         type: boolean
@@ -422,6 +425,7 @@ jobs:
             HONEYCOMB_API_KEY=${<< parameters.honeycomb-api-key >>} \
             DEPLOYS_API_KEY=${<< parameters.deploys-api-key >>} \
             LOGGER_POSTGRES_URI=${<< parameters.logger-postgres-uri >>} \
+            STRIPE_SECRET_KEY=${<< parameters.stripe-secret-key >>} \
             make deploy
       - when:
           condition: << parameters.production >>
@@ -774,6 +778,7 @@ workflows:
           honeycomb-api-key: DEV_HONEYCOMB_API_KEY
           deploys-api-key: DEV_DEPLOYS_API_KEY
           logger-postgres-uri: DEV_LOGGER_POSTGRES_URI
+          stripe-secret-key: DEV_STRIPE_SECRET_KEY
           requires:
             - build-and-push-unstable
   release:
@@ -848,6 +853,7 @@ workflows:
           honeycomb-api-key: PROD_HONEYCOMB_API_KEY
           deploys-api-key: PROD_DEPLOYS_API_KEY
           logger-postgres-uri: PROD_LOGGER_POSTGRES_URI
+          stripe-secret-key: PROD_STRIPE_SECRET_KEY
           ssh-fingerprint: 6a:c5:33:fe:5b:c9:06:df:99:64:ca:17:0d:32:18:2e
           ssh-config-script: production-ssh-config.sh
           ssh-host: shuttle.prod.internal
