common-tests: merged with test-utils

--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -41,5 +41,5 @@ hyper = { workspace = true }
 once_cell = { workspace = true }
 portpicker = { workspace = true }
 serde_json = { workspace = true }
-test-utils = { workspace = true }
+shuttle-common-tests = { workspace = true }
 tower = { workspace = true, features = ["util"] }
